--- a/relay/templates/relay/base.html
+++ b/relay/templates/relay/base.html
@@ -41,6 +41,7 @@
                 <ul class="nav">
                     <li class="active"><a href="/">Home</a></li>
                     <li><a href="/submissions/">Submissions</a></li>
+                    <li><a href="/contacts/">Contacts</a></li>
 
                 </ul>
             </div><!--/.nav-collapse -->
