handle value error

--- a/relay/templates/relay/submissions.html
+++ b/relay/templates/relay/submissions.html
@@ -36,7 +36,7 @@
         </td>
         <td>
             {% if payment.client %}
-            {{ payment.client.fullname }} UGX
+            {{ payment.client.display_name}} UGX
                 {% else %}
             Not In the system yet
             {% endif %}
