--- a/relay/templates/relay/base.html
+++ b/relay/templates/relay/base.html
@@ -41,7 +41,8 @@
                 <ul class="nav">
                     <li class="active"><a href="/">Home</a></li>
                     <li><a href="/submissions/">Submissions</a></li>
-                    <li><a href="/contacts/">Contacts</a></li>
+                    <li><a href="/console/">All Messages</a></li>
+                    <li><a href="/messages/">Send Messages</a></li>
 
                 </ul>
             </div><!--/.nav-collapse -->
