--- a/relay/templates/relay/submissions.html
+++ b/relay/templates/relay/submissions.html
@@ -2,6 +2,14 @@
 
 {% block content %}
 <div class="container span-12">
+    <div class="row" style="float:right;">
+    <form method="get" class="navbar-search pull-left">
+        <input name="search"  type="text"  class="search-query" placeholder="Search">
+        <input type="submit" value="Search">
+    </form>
+    </div>
+
+
     <h3>Payements Listing</h3>
     <table class="table table-bordered table-striped" width="100%">
         <thead>
